examples/test/testpolicy1971.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1971
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key20: value40
      key18: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value30
          key33: value49
          key40: value43
      podSelector:
        matchLabels:
          key1: value44
          key9: value35
